Add performance tests, CI/CD,..