@@ -1,121 +1,150 @@
 package com.tuyet.pages;
 
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.time.Duration;
 
 import org.openqa.selenium.By;
-import org.openqa.selenium.JavascriptExecutor;
 import org.openqa.selenium.WebDriver;
-import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.ui.ExpectedConditions;
 import org.openqa.selenium.support.ui.WebDriverWait;
 
 public class HomePage extends BasePage {
 
-    private By nameHeading = By.xpath("//h1");
-    private By themeSwitch = By.xpath("//span[text()='SWITCH']/preceding-sibling::div");
-    private By mainContainer = By.xpath("//div[contains(@class, 'min-h-screen')]");
-    private By portraitImg = By.xpath("//img[@alt='Portrait']");
-    private By aboutMenu = By.xpath("//a[contains(@href, 'about')]");
-    private By contentGrid = By.xpath("//div[contains(@class, 'flex-col') or contains(@class, 'md:flex-row')]");
-    private By mobileMenuButton = By.xpath("//button[contains(@class, 'md:hidden')]");
+    private static final By HEADING_NAME = By.xpath("//h1");
+    private static final By BUTTON_THEME_SWITCH = By.xpath("//span[text()='SWITCH']/preceding-sibling::div");
+    private static final By CONTAINER_MAIN = By.xpath("//div[contains(@class, 'min-h-screen')]");
+    private static final By IMG_PORTRAIT = By.xpath("//img[@alt='Portrait']");
+    private static final By LINK_ABOUT = By.xpath("//a[contains(@href, 'about')]");
+    private static final By CONTAINER_CONTENT_GRID = By.xpath("//div[contains(@class, 'flex-col') or contains(@class, 'md:flex-row')]");
+    private static final By BUTTON_MOBILE_MENU = By.xpath("//button[contains(@class, 'md:hidden')]");
+    private static final By LINK_CV = By.xpath("//a[contains(@href, '.pdf')]");
+    private static final By LINK_GITHUB = By.xpath("//a[contains(@href, 'github.com')]");
+    private static final By LINK_FACEBOOK = By.xpath("//a[contains(@href, 'facebook.com')]");
+    private static final By LINK_TIKTOK = By.xpath("//a[contains(@href, 'tiktok.com')]");
 
-    private By cvLink = By.xpath("//a[contains(@href, '.pdf')]");
-    private By githubLink = By.xpath("//a[contains(@href, 'github.com')]");
-    private By facebookLink = By.xpath("//a[contains(@href, 'facebook.com')]");
-    private By tiktokLink = By.xpath("//a[contains(@href, 'tiktok.com')]");
+    private static final int HTTP_TIMEOUT_MS = 5000;
 
     public HomePage(WebDriver driver) {
         super(driver);
-    }
-
-    public HomePage toggleTheme() {
-        clickElement(themeSwitch);
-        return this;
-    }
-
-    public void goToAboutPage() {
-        wait.until(ExpectedConditions.visibilityOfElementLocated(nameHeading));
-        clickElement(aboutMenu);
-        wait.until(ExpectedConditions.urlContains("about"));
     }
 
     public String getPageTitle() {
         return driver.getTitle();
     }
 
-    public String getCurrentThemeBackground() {
-        return wait.until(ExpectedConditions.visibilityOfElementLocated(mainContainer))
+    public String getNameText() {
+        return getTextElement(HEADING_NAME).replace("\n", " ");
+    }
+
+    public String getBackgroundColor() {
+        return wait.until(ExpectedConditions.visibilityOfElementLocated(CONTAINER_MAIN))
                 .getCssValue("background-color");
     }
 
-    public String getBgColor() {
-        return getCurrentThemeBackground();
+    public String getCVLink() {
+        return getAttribute(LINK_CV, "href");
     }
 
-    public String getBgColorAfterSwitch(String oldColor) {
-        wait.until(d -> !getCurrentThemeBackground().equalsIgnoreCase(oldColor));
-        return getCurrentThemeBackground();
+    public String getGithubLink() {
+        return getAttribute(LINK_GITHUB, "href");
     }
 
-    public String getNameText() {
-        return wait.until(ExpectedConditions.visibilityOfElementLocated(nameHeading))
-                .getText().replace("\n", " ");
+    public String getFacebookLink() {
+        return getAttribute(LINK_FACEBOOK, "href");
     }
 
-    public boolean isPortraitVisible() {
-        return isElementPresent(portraitImg);
+    public String getTiktokLink() {
+        return getAttribute(LINK_TIKTOK, "href");
     }
 
-    public int verifyLinkStatus(String urlString) {
+    public String getContentGridClass() {
+        return getAttribute(CONTAINER_CONTENT_GRID, "class");
+    }
+
+    public String getMainContainerClass() {
+        return getAttribute(CONTAINER_MAIN, "class");
+    }
+
+    public HomePage toggleTheme() {
+        clickElement(BUTTON_THEME_SWITCH);
+        return this;
+    }
+
+    public HomePage openMobileMenu() {
+        clickElement(BUTTON_MOBILE_MENU);
+        return this;
+    }
+
+    public void navigateToAbout() {
+        wait.until(ExpectedConditions.visibilityOfElementLocated(HEADING_NAME));
+        clickElement(LINK_ABOUT);
+        wait.until(ExpectedConditions.urlContains("about"));
+    }
+
+    public boolean isPortraitDisplayed() {
+        return isElementPresent(IMG_PORTRAIT);
+    }
+
+    public boolean isStackedLayout() {
+        return getContentGridClass().contains("flex-col");
+    }
+
+    public boolean isThemeChanged(String previousColor) {
+        new WebDriverWait(driver, Duration.ofSeconds(5))
+                .until(d -> !getBackgroundColor().replaceAll("\\s+", "")
+                        .equalsIgnoreCase(previousColor.replaceAll("\\s+", "")));
+        return true;
+    }
+
+    public int verifyLinkStatus(String url) {
         try {
-            URL url = new URL(urlString);
-            HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+            HttpURLConnection connection = (HttpURLConnection) URI.create(url).toURL().openConnection();
             connection.setRequestMethod("GET");
-            connection.setConnectTimeout(5000);
+            connection.setConnectTimeout(HTTP_TIMEOUT_MS);
             connection.connect();
-            int code = connection.getResponseCode();
+            int statusCode = connection.getResponseCode();
             connection.disconnect();
-            return code;
+            return statusCode;
         } catch (Exception e) {
             return 404;
         }
     }
 
+    public String getBgColor() {
+        return getBackgroundColor();
+    }
+
+    public String getBgColorAfterSwitch(String oldColor) {
+        isThemeChanged(oldColor);
+        return getBackgroundColor();
+    }
+
+    public String getCurrentThemeBackground() {
+        return getBackgroundColor();
+    }
+
     public String getCVHref() {
-        return getAttribute(cvLink, "href");
+        return getCVLink();
     }
 
     public String getGithubHref() {
-        return getAttribute(githubLink, "href");
+        return getGithubLink();
     }
 
     public String getFacebookHref() {
-        return getAttribute(facebookLink, "href");
+        return getFacebookLink();
     }
 
     public String getTiktokHref() {
-        return getAttribute(tiktokLink, "href");
+        return getTiktokLink();
     }
 
-    public String getContentGridClass() {
-        return getAttribute(contentGrid, "class");
+    public void goToAboutPage() {
+        navigateToAbout();
     }
 
-    public String getMainContainerClass() {
-        return getAttribute(mainContainer, "class");
-    }
-
-    public String getThemeClass() {
-        return getAttribute(mainContainer, "class");
-    }
-
-    public boolean isStackedLayout() {
-        return getAttribute(mainContainer, "class").contains("flex-col");
-    }
-
-    public HomePage openMobileMenu() {
-        wait.until(ExpectedConditions.elementToBeClickable(mobileMenuButton)).click();
-        return this;
+    public boolean isPortraitVisible() {
+        return isPortraitDisplayed();
     }
 }
